[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/dashed_line/dashed_line.gd" type="Script" id=1]
[ext_resource path="res://addons/dashed_line/dashed_line.gdshader" type="Shader" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/is_dashed = true
shader_param/dashed_count = 25.5

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/is_dashed = true
shader_param/dashed_count = 25.5

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/is_dashed = true
shader_param/dashed_count = 25.5

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="DashedLine2D" type="Line2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0.326302, -1.61765 )
scale = Vector2( 0.994374, 1.02489 )
points = PoolVector2Array( 61, 68, 766, 504 )
width = 3.0
texture_mode = 2
joint_mode = 2
antialiased = true
script = ExtResource( 1 )

[node name="CircleDashedLine2D" type="Line2D" parent="."]
material = SubResource( 2 )
width = 3.0
texture_mode = 2
antialiased = true
script = ExtResource( 1 )

[node name="RectDashedLine2D" type="Line2D" parent="."]
material = SubResource( 3 )
width = 3.0
texture_mode = 2
antialiased = true
script = ExtResource( 1 )
